# dfir-ai-assistant

./: .env.example  .gitignore  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml
data/: README.md
docker/: Dockerfile.plaso  run_plaso.sh
docs/: agent_design.md  architecture.md  data_flow.md  decisions.md  glossary.md  llm_wiki.md  pipeline.md  plaso_parsers.json  rag_design.md  roadmap.md  skills.md  threat_intel_sources.md
docs/plaso_docs/: analysis_plugins.txt  collection_filters.txt  creating_timeline.txt  event_filters.txt  supported_formats.txt  tips_tricks.txt  users_guide.txt  using_log2timeline.txt
src/: __init__.py
src/agents/: __init__.py  cli.py  context_budget.py  dfir_agent.py  llm.py  plaso_knowledge.py  skills.py  subagents.py
src/pipeline/: __init__.py  hayabusa.py  normalizer.py  runner.py  sanitizer.py
src/rag/: __init__.py  chunker.py  embedder.py  indexer.py  tfidf_embedder.py  turbovec.py
src/wiki/: __init__.py
tests/: __init__.py  test_agent.py  test_chunker.py  test_context_budget.py  test_e2e_pipeline.py  test_embedder.py  test_hayabusa.py  test_normalizer.py  test_placeholder.py  test_plaso_kb.py  test_sanitizer.py  test_subagents.py  test_turbovec.py
wiki/: README.md
wiki/ioc/: README.md
wiki/playbooks/: README.md
wiki/reports/: README.md
wiki/ttp/: README.md
