[project]
name = "dfir-ai-assistant"
version = "0.0.1"
description = "AI assistant for DFIR specialists: triage -> plaso -> RAG -> agent"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
faiss = ["faiss-cpu>=1.8"]
pdf = ["pdfplumber>=0.11"]
html = ["trafilatura>=1.10"]
openai = ["openai>=1.30"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]